--- a/public/index.html
+++ b/public/index.html
@@ -65,12 +65,6 @@
 </section><section>
 
 
-<span class='fragment ' ><h3 id="problema">Problema</h3>
-</span>
-
-
-
-
 <span class='fragment ' ><p>I modelli di Machine Learning sono sensibili ai dati di addestramento.</p>
 </span>
 
@@ -84,7 +78,7 @@
 
 
 </section><section>
-<h2 id="una-soluzione">Una soluzione</h2>
+<h2 id="possibile-metodo-miglioramento">Possibile metodo miglioramento</h2>
 
 
 <span class='fragment ' ><p><strong>Generare</strong> nuovi dati a partire da quelli già esistenti per migliorare i modelli di Machine Learning</p>
