--- a/public/index.html
+++ b/public/index.html
@@ -131,6 +131,12 @@
 </span>
 
 
+
+
+<span class='fragment ' ><p><img src="sbo.png" alt=""></p>
+</span>
+
+
 </section><section>
 <h2 id="dataset-utilizzati">Dataset utilizzati</h2>
 
